--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,12 @@ authors = ["ForsakenHarmony <ulliftw@gmail.com>"]
 
 [dependencies]
 juniper = { path = "../juniper/juniper", features = ["nightly"] }
-juniper_rocket = { path = "../juniper/juniper_rocket"}
-rocket = "0.3"
-rocket_codegen = "0.3"
+juniper_iron = { path = "../juniper/juniper_iron"}
 dotenv = "0.13"
 diesel = { version = "1.3", features = ["postgres"] }
 r2d2 = "0.8"
 r2d2-diesel = "1.0"
+router = "0.6"
+mount = "0.4"
+logger = "0.4"
+iron = ">= 0.5, < 0.7"
