--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "server"
+name = "rust-graphql-server"
 version = "0.1.0"
-authors = ["ForsakenHarmony <ulliftw@gmail.com>"]
+authors = ["ForsakenHarmony <me@hrmny.pw>"]
 
 [target.heroku]
 version = "nightly"
