--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,17 +3,17 @@ name = "rust-graphql-server"
 version = "0.1.0"
 authors = ["ForsakenHarmony <me@hrmny.pw>"]
 
-[target.heroku]
-version = "nightly"
-
 [dependencies]
 juniper = { git = "https://github.com/ForsakenHarmony/juniper.git", features = ["nightly"] }
-juniper_iron = { git = "https://github.com/ForsakenHarmony/juniper.git" }
 dotenv = "0.13"
 diesel = { version = "1.3", features = ["postgres"] }
 r2d2 = "0.8"
 r2d2-diesel = "1.0"
 router = "0.6"
-mount = "0.4"
 logger = "0.4"
-iron = ">= 0.5, < 0.7"
+log = "0.4.0"
+pretty_env_logger = "0.2"
+hyper = "0.12"
+futures = "0.1"
+serde = { version = "1.0.8" }
+serde_json = { version="1.0.2" }
